--- a/package.json
+++ b/package.json
@@ -16,13 +16,15 @@
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.2",
     "@sanity/image-url": "1",
     "@sanity/vision": "3",
     "@tailwindcss/typography": "^0.5.15",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.454.0",
-    "next": "^15.0.3-canary.1",
+    "markdown-it": "^14.1.0",
+    "next": "15.0.2",
     "next-auth": "^5.0.0-beta.25",
     "next-sanity": "^9.8.3-canary.1",
     "react": "19.0.0-rc-69d4b800-20241021",
