--- a/package.json
+++ b/package.json
@@ -20,11 +20,12 @@
     "@sanity/image-url": "1",
     "@sanity/vision": "3",
     "@tailwindcss/typography": "^0.5.15",
+    "@uiw/react-md-editor": "^4.0.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.454.0",
     "markdown-it": "^14.1.0",
-    "next": "15.0.2",
+    "next": "^15.0.3-canary.3",
     "next-auth": "^5.0.0-beta.25",
     "next-sanity": "^9.8.3-canary.1",
     "react": "19.0.0-rc-69d4b800-20241021",
@@ -34,7 +35,8 @@
     "server-only": "^0.0.1",
     "styled-components": "6",
     "tailwind-merge": "^2.5.4",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "eslint": "^8",
