--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -11,7 +11,8 @@
   "packageManager": "npm@10.9.0",
   "overrides": {
     "react": "$react",
-    "react-dom": "$react-dom"
+    "react-dom": "$react-dom",
+    "next": "$next"
   },
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.0",
@@ -19,6 +20,7 @@
     "@radix-ui/react-toast": "^1.2.2",
     "@sanity/image-url": "1",
     "@sanity/vision": "3",
+    "@sentry/nextjs": "8",
     "@tailwindcss/typography": "^0.5.15",
     "@uiw/react-md-editor": "^4.0.4",
     "class-variance-authority": "^0.7.0",
@@ -33,6 +35,7 @@
     "sanity": "3",
     "sanity-plugin-markdown": "^5.0.0",
     "server-only": "^0.0.1",
+    "slugify": "^1.6.6",
     "styled-components": "6",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
